--- a/README
+++ b/README
@@ -1,4 +1,3 @@
-
 ==================================================
 vme64x-core project
 --------------------------------------------------
@@ -34,4 +33,11 @@ Matthieu Cattin
 `-- sw                       -> Software directory
     `-- vfc                  -> Board specific software
         `-- python           -> Python programs
+
+==================================================
+
+Please send any questions or opinions to:
+
+Developers: rok.stefanic@cosylab.com, ziga.kroflic@cosylab.com
+OHWR list: vme64x-core@ohwr.org
 
