--- a/doc/review-2017-11-13/dlamprid-vme64x_review.org
+++ b/doc/review-2017-11-13/dlamprid-vme64x_review.org
@@ -14,6 +14,7 @@
   + capital or small case file names?
   The same case, lower case.
   + ...
+  Done.
 - does not strictly follow proposed folder structure
   See Maciej comment
 
