--- a/doc/review-2017-11-13/dlamprid-vme64x_review.org
+++ b/doc/review-2017-11-13/dlamprid-vme64x_review.org
@@ -20,9 +20,9 @@
 
 * VME64x core
 - get rid of SVEC_ID, CERN_ID etc from package and default generic values
-  OK for default generic
+  Done. OK for default generic
 - what happens if the c_CLOCK_PERIOD is wrong? maybe it's better to get rid of it, set g_CLOCK_PERIOD by default to zero and assert that it is set to something else by user
-  OK.
+  Done. OK.
 - shal we name/label all processes?
   NO, but...
 ** VME64xCore_top.vhd
@@ -34,12 +34,13 @@
   No problem, discussion about width postponed.
 *** VME_CR_CSR_Space.vhd
 - delete unused port vme_sysfail_ena_o?
-  OK.
+  Done.
 
 * Simulation
 - how am I supposed to run it? A README would help
+  Done.
 - why open the GUI at the end of make?
-  OK.
+  Done.
 - why keep around VME BFM if you are not using it? Why the SVEC-specific file in the VME BFM?
   Removed. To be restored.
 - why not (also) GHDL if Modelsim is not necessary?
