--- a/README
+++ b/README
@@ -1,6 +1,16 @@
 VME64x Core
 ===========
 
+Using the core
+--------------
+
+There is an example in the svec repository.  See svec/hdl/syn/vmecore_test
+The design implements the core on a svec card, with a WB slave that implements
+various features (an SRAM, a pattern area to check DMA, a simple timer to
+check interrupts, a bus-error generator...).
+There is a C program (in svec/software/vmecore_test) to test all these
+features.
+
 Running the testbench
 ---------------------
 
